# haskell-turtle-eggshell

./: stack.yaml  turtle-eggshell.cabal
src/: Eggshell.hs
