name:                turtle-eggshell
version:             0.1.0.3
-- synopsis:
-- description:
homepage:            https://github.com/ExpHP/turtle-eggshell#readme
license:             MIT
license-file:        LICENSE
author:              Michael Lamparski
maintainer:          diagonaldevice@gmail.com
copyright:           Copyright 2017 Michael Lamparski
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Eggshell
  build-depends: base >= 4.7 && < 5
               , exceptions
               , extra
               , foldl
               , managed
               , string-convert
               , system-filepath
               , text
               , turtle
               , unix
               , Glob
  default-language:    Haskell2010

test-suite eggshell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends: base >= 4.7 && < 5
               , Glob
               , turtle-eggshell
               , exceptions
               , extra
               , foldl
               , managed
               , string-convert
               , system-filepath
               , text
               , turtle
               , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ExpHP/turtle-eggshell
